test sending and storing orders and payment transactions